feat: refine world editing and voxel lighting